tests/ui/parser/expected_while.stderr
error: expected `while`, found `;`
  --> ROOT/tests/ui/parser/expected_while.sol:LL:CC
   |
LL |     do {} ;
   |           ^ expected `while`

error: aborting due to 1 previous error

